--- a/superCounterTwo/Base.lproj/Main.storyboard
+++ b/superCounterTwo/Base.lproj/Main.storyboard
@@ -92,7 +92,7 @@
                                     <fontDescription key="titleFontDescription" type="system" pointSize="30"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <action selector="reset:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gY0-HN-RLS"/>
+                                    <action selector="reset:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4c0-XU-vcW"/>
                                 </connections>
                             </button>
                         </subviews>
